<resources>
    <string name="app_name">Poke-Organizer</string>
    <string name="poke_organizer">Poke-Organizer</string>
    <string name="tarea2">Tarea2</string>
    <string name="tarea1">Tarea1</string>
    <string name="tarea3">Tarea3</string>
    <string name="tarea4">Tarea4</string>
    <string name="tarea5">Tarea5</string>
    <string name="imagen_pokemon">Imagen Pokemon</string>
    <string name="nombre_pokemon">Nombre pokemon</string>
    <string name="pantalla_pokedex">pantalla pokedex</string>
    <string name="level">"Nivel "</string>
    <string name="barra_divisora">barra divisora</string>
    <string name="pasear_al_perro">Pasear al perro</string>
    <string name="limpiar_la_casa">Limpiar la casa</string>
    <string name="lavar_la_ropa">Lavar la ropa</string>
    <string name="ir_al_gimnasio">Ir al gimnasio</string>
    <string name="correr_10_km">Correr 10 km</string>
    <string name="ir_a_comprar_carne">Ir a comprar carne</string>
    <string name="terminar_el_trabajo_de_photoshop">Terminar el trabajo de photoshop</string>
    <string name="arreglar_el_jardin">Arreglar el jardin</string>
    <string name="arreglar_el_agujero_en_el_techo">Arreglar el agujero en el techo</string>
    <string name="vaciar_la_fosa_asceptica">Vaciar la fosa asceptica</string>
    <string name="empezar_el_proyecto_de_programacion">Empezar el proyecto de programacion</string>
    <string name="darle_de_comer_al_perro">Darle de comer al perro</string>
    <string name="cortar_el_pasto_del_parque">Cortar el pasto del parque</string>
    <string name="experience">0</string>
    <string name="perfil">Perfil</string>
    <string name="nombreUsuario" />
    <string name="nivelUsuario" />
    <string name="perfil_button">Perfil</string>
    <string name="agregar_tarea">Agregar Tarea</string>
    <string name="tareas">Tareas</string>
    <string name="perfil_title">Perfil</string>
    <string name="escribe_tu_correo_electr_nico_de_nuevo">Escribe tu correo electrónico de nuevo</string>
    <string name="estadisticas">Estadisticas</string>
</resources>