<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/navbar"
    tools:context=".ProfileActivity">

    <Button
        android:id="@+id/tareas"
        android:layout_width="43dp"
        android:layout_height="42dp"
        android:alpha="0.1"
        android:text="@string/perfil"
        app:layout_constraintBottom_toTopOf="@+id/divideBar2"
        app:layout_constraintEnd_toEndOf="@+id/botona"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/botona"
        app:layout_constraintTop_toBottomOf="@+id/title2"
        app:layout_constraintVertical_bias="0.208"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/pagina2"
        android:layout_width="83dp"
        android:layout_height="39dp"
        android:fontFamily="@font/roboto_bold"
        android:padding="@dimen/pokenamePadding"
        android:text="@string/tareas"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/divideBar2"
        app:layout_constraintEnd_toStartOf="@+id/tareas"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title2"
        app:layout_constraintVertical_bias="0.213"
        tools:ignore="VisualLintOverlap" />

    <ImageView
        android:id="@+id/botona"
        android:layout_width="40dp"
        android:layout_height="41dp"
        android:layout_marginEnd="11dp"
        android:contentDescription="@string/pantalla_pokedex"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/divideBar2"
        app:layout_constraintEnd_toStartOf="@+id/pokeBackground2"
        app:layout_constraintHorizontal_bias="0.803"
        app:layout_constraintStart_toStartOf="@+id/divideBar2"
        app:layout_constraintTop_toBottomOf="@+id/title2"
        app:layout_constraintVertical_bias="0.211"
        app:srcCompat="@drawable/boton_a" />

    <ImageView
        android:id="@+id/botonb"
        android:layout_width="40dp"
        android:layout_height="41dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="11dp"
        android:contentDescription="@string/pantalla_pokedex"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/divideBar2"
        app:layout_constraintEnd_toStartOf="@+id/pokeBackground2"
        app:layout_constraintHorizontal_bias="0.747"
        app:layout_constraintStart_toStartOf="@+id/nombreUsuario"
        app:layout_constraintTop_toBottomOf="@+id/title2"
        app:layout_constraintVertical_bias="0.394"
        app:srcCompat="@drawable/boton_b" />

    <TextView
        android:id="@+id/title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/poke_organizer"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.752"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.046" />

    <ImageView
        android:id="@+id/pokeBackground2"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/pantalla_pokedex"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.734"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.237"
        app:srcCompat="@drawable/pokedex_pantalla" />

    <ImageView
        android:id="@+id/PokeSprite"
        android:layout_width="135dp"
        android:layout_height="135dp"
        android:contentDescription="@string/imagen_pokemon"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="@+id/pokeBackground2"
        app:layout_constraintEnd_toEndOf="@+id/pokeBackground2"
        app:layout_constraintStart_toStartOf="@+id/pokeBackground2"
        app:layout_constraintTop_toTopOf="@+id/pokeBackground2"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/pagina"
        android:layout_width="95dp"
        android:layout_height="42dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/roboto_bold"
        android:padding="@dimen/pokenamePadding"
        android:text="@string/perfil_title"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.591"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title2"
        tools:ignore="VisualLintOverlap" />

    <ImageView
        android:id="@+id/divideBar2"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/divideBarHeight"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/barra_divisora"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/scroll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pokeBackground2"
        app:srcCompat="@drawable/dividebar"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/nivelUsuario"
        android:layout_width="89dp"
        android:layout_height="26dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/level"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/divideBar2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.447"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/divideBar2"
        app:layout_constraintVertical_bias="0.458" />

    <TextView
        android:id="@+id/pokename2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/roboto_bold"
        android:padding="@dimen/pokenamePadding"
        android:text="@string/nombre_pokemon"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/divideBar2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.384"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pokeBackground2"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="VisualLintOverlap" />

    <TextView
        android:id="@+id/nombreUsuario"
        android:layout_width="114dp"
        android:layout_height="28dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/nombreUsuario"
        app:layout_constraintBottom_toBottomOf="@+id/divideBar2"
        app:layout_constraintEnd_toStartOf="@+id/nivelUsuario"
        app:layout_constraintHorizontal_bias="0.41"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/divideBar2"
        app:layout_constraintVertical_bias="0.405" />

</androidx.constraintlayout.widget.ConstraintLayout>