<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/navbar"
    tools:context=".DetailActivity">


    <TextView
        android:id="@+id/subtitulo"
        android:layout_width="225dp"
        android:layout_height="66dp"
        android:fontFamily="@font/roboto_bold"
        android:padding="@dimen/pokenamePadding"
        android:text="@string/estadisticas"
        android:textColor="@color/levelColor"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/pokeBackground2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.625"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title2"
        app:layout_constraintVertical_bias="0.774"
        tools:ignore="VisualLintOverlap" />

    <TextView
        android:id="@+id/pokename2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:padding="@dimen/pokenamePadding"
        android:text="@string/nombre_pokemon"
        android:textColor="@color/levelColor"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.591"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pokeBackground2"
        tools:ignore="VisualLintOverlap" />

    <ImageView
        android:id="@+id/botona"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="28dp"
        android:contentDescription="@string/pantalla_pokedex"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/perfil2"
        app:layout_constraintEnd_toStartOf="@+id/pokeBackground2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title2"
        app:layout_constraintVertical_bias="0.517"
        app:srcCompat="@drawable/boton_a"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/pagina2"
        android:layout_width="89dp"
        android:layout_height="46dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/roboto_bold"
        android:padding="@dimen/pokenamePadding"
        android:text="@string/tareas"
        android:textColor="@color/levelColor"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tareas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title2"
        app:layout_constraintVertical_bias="0.807"
        tools:ignore="VisualLintOverlap" />

    <Button
        android:id="@+id/tareas"
        android:layout_width="52dp"
        android:layout_height="49dp"
        android:alpha="0.1"
        android:text="@string/perfil"
        app:layout_constraintBottom_toBottomOf="@+id/botona"
        app:layout_constraintEnd_toEndOf="@+id/botona"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/botona"
        app:layout_constraintTop_toTopOf="@+id/botona"
        tools:ignore="TouchTargetSizeCheck,TextSizeCheck,DuplicateSpeakableTextCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/poke_organizer"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.752"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.046" />

    <ImageView
        android:id="@+id/pokeBackground2"
        android:layout_width="306dp"
        android:layout_height="274dp"
        android:contentDescription="@string/pantalla_pokedex"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.971"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.317"
        app:srcCompat="@drawable/pokedex_pantalla" />

    <ImageView
        android:id="@+id/PokeSprite"
        android:layout_width="270dp"
        android:layout_height="233dp"
        android:contentDescription="@string/imagen_pokemon"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="@+id/pokeBackground2"
        app:layout_constraintEnd_toEndOf="@+id/pokeBackground2"
        app:layout_constraintHorizontal_bias="0.543"
        app:layout_constraintStart_toStartOf="@+id/pokeBackground2"
        app:layout_constraintTop_toTopOf="@+id/pokeBackground2"
        app:layout_constraintVertical_bias="0.45"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/pagina"
        android:layout_width="75dp"
        android:layout_height="42dp"
        android:fontFamily="@font/roboto_bold"
        android:padding="@dimen/pokenamePadding"
        android:text="@string/perfil_title"
        android:textColor="@color/levelColor"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/botonb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.032"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botona"
        app:layout_constraintVertical_bias="0.798"
        tools:ignore="VisualLintOverlap" />

    <Button
        android:id="@+id/perfil2"
        android:layout_width="52dp"
        android:layout_height="49dp"
        android:alpha="0.1"
        android:text="@string/perfil"
        app:layout_constraintBottom_toBottomOf="@+id/botonb"
        app:layout_constraintEnd_toEndOf="@+id/botonb"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/botonb"
        app:layout_constraintTop_toTopOf="@+id/botonb"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="TouchTargetSizeCheck,TextSizeCheck,TextContrastCheck" />

    <ImageView
        android:id="@+id/botonb"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginTop="296dp"
        android:layout_marginEnd="28dp"
        android:contentDescription="@string/pantalla_pokedex"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@+id/pokename2"
        app:layout_constraintEnd_toStartOf="@+id/pokeBackground2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title2"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/boton_b" />

    <LinearLayout
        android:id="@+id/linearLayType"
        android:layout_width="409dp"
        android:layout_height="46dp"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pokename2"
        app:layout_constraintVertical_bias="0.211">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayStats"
        android:layout_width="414dp"
        android:layout_height="82dp"
        android:layout_marginTop="141dp"
        android:background="@drawable/linealbackgroud"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pokename2"
        app:layout_constraintVertical_bias="0.125"></LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>