<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/navbar"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/pokemonChange"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:alpha="0.1"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/poke_organizer"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.679"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.047" />

    <ImageView
        android:id="@+id/divide_bar"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:contentDescription="@string/barra_divisora"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/scroll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pokename"
        app:srcCompat="@drawable/dividebar"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/pokename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:padding="10dp"
        android:text="@string/nombre_pokemon"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/divide_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/PokeBackground" />

    <TextView
        android:id="@+id/level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/level"
        android:textColor="#263238"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/divide_bar"
        app:layout_constraintEnd_toEndOf="@+id/pokename"
        app:layout_constraintHorizontal_bias="0.375"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/divide_bar"
        app:layout_constraintVertical_bias="0.326" />

    <ImageView
        android:id="@+id/PokeBackground"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/pantalla_pokedex"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.133"
        app:srcCompat="@drawable/pokedex_pantalla" />
    <ImageView
        android:id="@+id/PokeSprite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:contentDescription="@string/imagen_pokemon"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="@+id/pokename"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="154dp"
        android:layout_height="25dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="95dp"
        android:layout_marginBottom="18dp"
        android:progressDrawable="@drawable/custom_progress_bar"
        app:layout_constraintBottom_toBottomOf="@+id/divide_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/level"
        app:layout_constraintTop_toTopOf="@+id/divide_bar"/>

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="418dp"
        android:layout_height="304dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/pokedex_pantalla" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/checkBox1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteX="95dp"
                tools:layout_editor_absoluteY="238dp"
                tools:text="CheckBox 1"
                android:paddingStart="8dp"
                android:buttonTint="@android:color/holo_blue_light"/>

            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteX="95dp"
                tools:layout_editor_absoluteY="238dp"
                tools:text="CheckBox 1"
                android:paddingStart="8dp"
                android:buttonTint="@android:color/holo_blue_light"/>

            <CheckBox
                android:id="@+id/checkBox4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteX="95dp"
                tools:layout_editor_absoluteY="238dp"
                tools:text="CheckBox 1"
                android:paddingStart="8dp"
                android:buttonTint="@android:color/holo_blue_light"/>

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteX="95dp"
                tools:layout_editor_absoluteY="238dp"
                tools:text="CheckBox 1"
                android:paddingStart="8dp"
                android:buttonTint="@android:color/holo_blue_light"/>

            <CheckBox
                android:id="@+id/checkBox5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteX="95dp"
                tools:layout_editor_absoluteY="238dp"
                tools:text="CheckBox 1"
                android:paddingStart="8dp"
                android:buttonTint="@android:color/holo_blue_light"/>

            <CheckBox
                android:id="@+id/checkBox6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteX="95dp"
                tools:layout_editor_absoluteY="238dp"
                tools:text="CheckBox 1"
                android:paddingStart="8dp"
                android:buttonTint="@android:color/holo_blue_light"/>

            <CheckBox
                android:id="@+id/checkBox7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteX="95dp"
                tools:layout_editor_absoluteY="238dp"
                tools:text="CheckBox 1"
                android:paddingStart="8dp"
                android:buttonTint="@android:color/holo_blue_light"/>

            <CheckBox
                android:id="@+id/checkBox8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteX="95dp"
                tools:layout_editor_absoluteY="238dp"
                tools:text="CheckBox 1"
                android:paddingStart="8dp"
                android:buttonTint="@android:color/holo_blue_light"/>

            <CheckBox
                android:id="@+id/checkBox9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteX="95dp"
                tools:layout_editor_absoluteY="238dp"
                tools:text="CheckBox 1"
                android:paddingStart="8dp"
                android:buttonTint="@android:color/holo_blue_light"/>

        </LinearLayout>
    </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>